# bitgn

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  pyproject.toml
code-playground/: pip_ops.sh
docs/: README.md
docs/architecture/: agent-model-client.md  agent-runtime-workspace.md  bitgn-benchmark-runner.md  index.md  laconic-sage-agent.md  local-llms-workspace.md  repository-structure.md
docs/decisions/: index.md
docs/exec-plans/: README.md  tech-debt-tracker.md
docs/exec-plans/active/: 2026-04-04-bitgn-intelligence.md  2026-04-04-first-agent-version.md  2026-04-04-minimal-bitgn-platform.md  README.md
docs/exec-plans/completed/: README.md
docs/experiments/: index.md
docs/operations/: benchmark-first-score.md  index.md  runbook.md
docs/project/: glossary.md  index.md  scope.md  vision.md
docs/references/: bitgn-platform.md  index.md
docs/templates/: README.md  decision-record.md  execution-plan.md  experiment-note.md
local-llms/: .gitignore  README.md  RUNBOOK.md  flake.nix
notebooks/: README.md  bitgn_api_playground.ipynb
notebooks/.ipynb_checkpoints/: bitgn_api_playground-checkpoint.ipynb
proto/bitgn/: harness.proto
scripts/: run-bitgn-pac1  run-bitgn-sandbox  run_bitgn_agent.py
src/benchmark/: __init__.py
src/benchmark/bitgn/: __init__.py  agent_loop.py  cli.py  common.py  config.py  contracts.py  laconic_sage_agent.py  pac1_agent_loop.py  pac1_protocol.py  pac1_runtime.py  platform.py  protocol.py  runner.py  runtime.py  runtime_tools.py  sandbox_agent_loop.py  sandbox_protocol.py  sandbox_runtime.py
src/model_clients/: __init__.py  base.py  factory.py  ollama_client.py  openai_client.py  types.py
tests/: conftest.py
tests/integration/model_clients/: test_ollama_client_live.py
tests/unit/benchmark/: test_agent_loop.py  test_cli.py  test_config.py  test_laconic_sage_agent.py  test_pac1_protocol.py  test_platform.py  test_runner.py  test_runtime.py  test_runtime_tools.py
tests/unit/model_clients/: test_factory.py  test_ollama_client.py  test_openai_client.py
workspaces/agent-runtime/: README.md  flake.nix
workspaces/local-llms/: .gitignore  README.md  RUNBOOK.md  flake.nix
