[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "columbarium"
version = "0.1.0"
description = "BitGN benchmark agent foundations"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.2,<10",
]

[tool.uv]
default-groups = ["dev"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
  "local_model: integration test that makes a real request to the local Ollama model",
]
