[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "columbarium"
version = "0.1.0"
description = "BitGN benchmark agent foundations"
requires-python = ">=3.10"
dependencies = [
  "bitgn-api-connectrpc-python==0.9.0.1.20260324104753+6b18c777b19a",
  "bitgn-api-protocolbuffers-python==34.1.0.1.20260324104753+6b18c777b19a",
  "pydantic>=2.12.5,<3",
]

[dependency-groups]
dev = [
  "pytest>=8.2,<10",
]

[tool.uv]
default-groups = ["dev"]

[[tool.uv.index]]
url = "https://buf.build/gen/python"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
  "local_model: integration test that makes a real request to the local Ollama model",
]
