[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "columbarium"
version = "0.1.0"
description = "BitGN benchmark agent foundations"
requires-python = ">=3.10"
dependencies = [
  "bitgn-api-connectrpc-python==0.9.0.1.20260405144405+6b39e6872349",
  "bitgn-api-protocolbuffers-python==34.1.0.1.20260405144405+6b39e6872349",
  "langchain>=0.3,<0.4",
  "langgraph>=0.2,<0.4",
  "protobuf>=7.34.1",
]

[project.scripts]
bitgn-run = "benchmark.bitgn.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.2,<10",
]
notebook = [
  "jupyterlab>=4.2,<5",
]

[[tool.uv.index]]
url = "https://buf.build/gen/python"

[tool.uv]
default-groups = ["dev"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
  "local_model: integration test that makes a real request to the local Ollama model",
]
